force-app/main/default/objects/Candidate_Mailshot__c/Candidate_Mailshot__c.object-meta.xml
<CustomObject>
    <label>Candidate Mailshot</label>
    <nameField>
        <displayFormat>CMS-{000000}-{YYYY}</displayFormat>
        <label>Candidate Mailshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Mailshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>