force-app/main/default/objects/Candidate_Mailshot__c/fields/isCanvassed__c.field-meta.xml
<CustomField>
    <fullName>isCanvassed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCanvassed</label>
    <type>Checkbox</type>
</CustomField>