force-app/main/default/objects/Candidate_Mailshot__c/fields/isReplied__c.field-meta.xml
<CustomField>
    <fullName>isReplied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReplied</label>
    <type>Checkbox</type>
</CustomField>