force-app/main/default/objects/Candidate_Mailshot__c/fields/isSent__c.field-meta.xml
<CustomField>
    <fullName>isSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSent</label>
    <type>Checkbox</type>
</CustomField>