force-app/main/default/objects/Candidate_Mailshot__c/fields/Mailshot__c.field-meta.xml
<CustomField>
    <fullName>Mailshot__c</fullName>
    <label>Mailshot</label>
    <referenceTo>Mailshot__c</referenceTo>
    <relationshipLabel>Candidate Mailshots</relationshipLabel>
    <relationshipName>Candidate_Mailshots</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>